Use Mona Lisa image instead of a real image

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col-md-1 lp_heading_content lp_heading_image_container">
             <div class="lp_heading_cropper image-cropper">
-                <img class="lp_heading_content" src="images/ConorFaceSmall.jpg">
+                <img class="lp_heading_content" src="images/Mona_Lisa_cropped150.jpg">
             </div>
         </div>
         <div class="col-md-2 lp_heading_content">
