Add a blank footer to prevent unnecessary scrolling when opening a panel at the bottom of the page

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -221,6 +221,15 @@
     </div>
     <!-- /ko -->
 
+    <!--
+    We have a blank footer row because it makes the sligein/slideout functionality work better;
+    otherwise it can magically appear below the bottom of the currently visible screen.
+     -->
+    <div class="row lp_footer_bar">
+        <div class="col-md-1 lp_footer_content">
+        </div>
+    </div>
+
     <script type="text/javascript">
         startup()
     </script>
