Remove unwanted UI artifacts; add options for full dummy data retrieval

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -21,6 +21,7 @@
 
 <div class="container-fluid lp_body">
 
+    <!-- logo is not actually required
     <div class="row lp_logo lp_logo_bar">
         <div class="col-md-1 lp_logo_content">
         </div>
@@ -30,7 +31,7 @@
         <div class="col-md-9 lp_logo_content">
         </div>
     </div>
-
+    -->
     <div class="row lp_heading lp_heading_bar">
         <div class="col-md-1 lp_heading_content">
         </div>
@@ -58,7 +59,7 @@
                 </tr>
                 <tr>
                     <span class="lp_heading_summary_container">
-                        Level 1<span class="pull-right"><span data-bind="text: learning_plan.progress"></span></span>
+                        <span class="pull-right"><span data-bind="text: learning_plan.progress"></span></span>
                     </span>
                 </tr>
             </table>
