Added indicator triangle to show which course is expanded

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -134,6 +134,14 @@
                                             </div>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td class="lp_expansion_row">
+                                            <div class="lp_expansion_indicator">
+                                                <div data-bind="visible: !expanded()" class="arrow-up-hidden lp_expansion_centraliser"></div>
+                                                <div data-bind="visible: expanded()"  class="arrow-up        lp_expansion_centraliser"></div>
+                                            </div>
+                                        </td>
+                                    </tr>
                                 </table>
                         </td>
                         <!-- /ko -->
